tests/js/error/semantics/builtin_function_apply3.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

function f() { return this; }

var __result1 = f.apply(this);
var __expect1 = this;
